<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.CautionFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_top_window_permission"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginRight="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            app:cardCornerRadius="@dimen/_16sdp"
            app:cardElevation="@dimen/_1sdp"
            app:contentPadding="@dimen/_8sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.airbnb.lottie.LottieAnimationView
                        android:layout_width="@dimen/_70sdp"
                        android:layout_height="@dimen/_70sdp"
                        android:layout_gravity="center"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:lottie_autoPlay="true"
                        app:lottie_fileName="overlay_per.json"
                        app:lottie_loop="true" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/_8sdp"
                            android:gravity="center"
                            android:text="@string/on_top_of_other_windows"
                            android:textColor="@color/teal_200"
                            android:textSize="@dimen/_15ssp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/overlay_permission_recomend"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_10ssp"
                            android:textStyle="bold" />

                    </LinearLayout>

                </LinearLayout>

                <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                    android:id="@+id/overlayAllow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:layout_marginBottom="@dimen/_8sdp"
                    android:backgroundTint="@color/teal_200"
                    android:gravity="center"
                    android:text="@string/allow"
                    android:textColor="@color/white" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginRight="@dimen/_12sdp"
            android:gravity="center"
            android:text="@string/mi_brand_title"
            android:textColor="#FF0000"
            android:textSize="@dimen/_20ssp"
            android:textStyle="bold" />

        <TextView
            style="@style/textColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginRight="@dimen/_8sdp"
            android:text="@string/mi_brand_recomend1"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_8sdp"
            android:layout_marginRight="@dimen/_8sdp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="@dimen/_200sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_weight="1"
                android:src="@drawable/miui_1" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="@dimen/_200sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_weight="1"
                android:src="@drawable/miui_2" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="@dimen/_200sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_weight="1"
                android:src="@drawable/miui_3" />

        </LinearLayout>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/appSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_16sdp"
            android:backgroundTint="@color/teal_200"
            android:gravity="center"
            android:text="@string/open_app_settings"
            android:textColor="@color/white" />

        <TextView
            style="@style/textColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginRight="@dimen/_8sdp"
            android:text="@string/mi_brand_recomend2"
            android:textSize="@dimen/_16ssp"
            android:textStyle="bold" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_16sdp"
            android:backgroundTint="@color/teal_200"
            android:gravity="center"
            android:text="@string/next"
            android:textColor="@color/white" />

    </LinearLayout>

</ScrollView>